src/tests/fixtures/extend_type/notExported.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @GQLType */
class Query {
  // No fields
}

/** @GQLField */
function greeting(_: Query): string {
  return `Hello World`;
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/extend_type/notExported.invalid.ts:7:10 - error: Expected a `@GQLField` function to be a named export.

7 function greeting(_: Query): string {
           ~~~~~~~~
